Fix alignment & headings on support task pages (#2838)
A few layout issues were discovered earlier around search boxes in
support task pages; this fixes those.

Also amends the page headings and captions to mirror the tiles and
section headers on the home page.

Best reviewed with 'Hide whitespace' enabled.

--- a/TeachingRecordSystem/src/TeachingRecordSystem.SupportUi/wwwroot/Styles/site.scss
+++ b/TeachingRecordSystem/src/TeachingRecordSystem.SupportUi/wwwroot/Styles/site.scss
@@ -309,7 +309,7 @@
   display: block;
   text-decoration: none;
   padding: 20px;
-  height: 80px;
+  height: 90px;
 
   &--branded {
     background-color: $govuk-brand-colour;
@@ -362,4 +362,8 @@
       }
     }
   }
+}
+
+.trs-\!-height-full {
+  height: 100% !important;
 }
